--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ div{
     border-radius: 10px;
 }
 
+#detailsAtHome2{
+    text-align: center;
+    margin: auto;
+}
+
 #detailsAtHome{
     text-align: center;
     margin: auto;
