--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ div{
     margin: auto;
 }
 
+#detailsAtHome3{
+    text-align: center;
+    margin: auto;
+}
+
 #detailsAtHome{
     text-align: center;
     margin: auto;
